# functional-systems-in-haskell

./: README.org  basics.org  concurrency.org  iteratee.org  memory.org  phantoms.org  turtles.org
fsh-exercises/: .gitignore  README.md  fsh-exercises.cabal
fsh-exercises/scripts/: example1.hs
fsh-exercises/src/: Basics.hs  DMR.hs  FPatFB.hs  GHCLanguageExtensions.hs  GenericProgramming.hs  InformationFlowControl.hs  Iteratee.hs  Memory.hs  MyLenses.lhs  PWPipes.hs  PWTurtles.hs  Parsing.hs  Phantoms.hs  Rock2.hs  Testing.hs  ZippersAndLenses.hs
fsh-exercises/src/Concurrency/: ExceptionsPrimer.hs
fsh-exercises/test/: Spec.hs
lecture-notes/: README.md  basics.md  concurrency.md  extensions.md  fb.md  generic.md  ghc-compiler.md  ifc.md  iteratee.md  lenses.md  memory.md  omgwtfbbq.md  parsing.md  perf.md  phantoms.md  testing.md  turtles.md
lecture-notes/code/: metadata.hs
