name:                fsh-exercises
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/capitanbatata/fsh-exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
copyright:           2017 Damian Nadales
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Basics
                     , DMR
                     , Rock2
                     , Concurrency.ExceptionsPrimer
                     , Parsing
                     , PWTurtles
                     , Testing
                     , Memory
                     , Iteratee
  build-depends:       base >= 4.7 && < 5
                     , network >= 2.6.3
                     , turtle >= 1.2.8
                     , stm >= 2.4.4
                     , bytestring >= 0.10.8
                     , filepath >= 1.4.1
                     , unix >= 2.7.0
                     , directory >= 1.2.6
  default-language:    Haskell2010

executable fsh-exercises-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fsh-exercises
  default-language:    Haskell2010

test-suite fsh-exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fsh-exercises
                     , QuickCheck >= 2.8
                     , random >= 1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/capitanbatata/fsh-exercises
